--- a/Carteleras.html
+++ b/Carteleras.html
@@ -20,6 +20,17 @@
     </nav>
   </header>
   <div class="lista-container">
+
+    <div class="eventosNumerados">
+      <div>
+        <a href="Carteleras/UFC298.html"><img src="Imagenes pagina ufc/Alexander Volkanovski.jpg" /><img
+            src="Imagenes pagina ufc/Ilia Topuria.jpg" /><br />
+          <p>Alexander Volkanovski vs Ilia Topuria</p>
+          <br />UFC 298
+        </a>
+      </div>
+    </div>
+
     <div class="eventosNumerados">
       <div>
         <a href="Carteleras/UFC297.html"><img src="Imagenes pagina ufc/Sean Strickland.jpg" /><img
