--- a/Carteleras/UFC298.html
+++ b/Carteleras/UFC298.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="EstiloCarteleras.css">
     <link rel="stylesheet" type="text/css" href="../EstiloPaginaPrincipal.css">
     <link rel="icon" href="../Imagenes pagina ufc\LogoUFC.ico">
-    <title>Ufc 297</title>
+    <title>Ufc 298</title>
 </head>
         <header>
         <nav>
@@ -28,21 +28,17 @@
         </nav>
     </header>
 
-    <h1>Cartelera UFC 297</h1>
-    <a href="UFC296.html">
-    <button id="left-button">UFC 296</button>
-    </a>
-    <a href="UFC298.html">
-        <button id="right-button">UFC 298</button>
-        </a>
-    
+    <h1>Cartelera UFC 298</h1>
+    <a href="UFC297.html">
+    <button id="left-button">UFC 297</button>
+    </a>    
 
     <div class="image-container">
         <div class="fight-card">
             <a href="">
                 <button>
-                    <img src="../Imagenes pagina ufc\Strickland vs DuPlessis.jpg" alt="Strickland vs DuPlessis">
-                    <p>Sean Strickland vs Dricus Du Plessis</p>
+                    <img src="../Imagenes pagina ufc\Volkanovski vs Topuria.jpg" alt="Volkanovski vs Topuria">
+                    <p>alexander Volkanovski vs Ilia Topuria</p>
                 </button>
             </a>
         </div>
@@ -50,8 +46,8 @@
         <div class="fight-card">
             <a href="">
                 <button>
-                    <img src="../Imagenes pagina ufc\Pennington vs Silva.jpg" alt="Pennington vs Silva">
-                    <p>Raquel Pennington vs Mayra Bueno Silva</p>
+                    <img src="../Imagenes pagina ufc\Garry vs Neal.jpg" alt="Garry vs Neal">
+                    <p>Ian Machado Garry vs Geoff Neal</p>
                 </button>
             </a>
         </div>
@@ -59,8 +55,8 @@
         <div class="fight-card">
             <a href="">
                 <button>
-                    <img src="../Imagenes pagina ufc\Magny vs Malott.jpg" alt="Magny vs Malott">
-                    <p>Neil Magny vs Mike Malott</p>
+                    <img src="../Imagenes pagina ufc\Cejudo vs Dvalishvili.jpg" alt="Cejudo vs Dvalishvili">
+                    <p>Henry Cejudo vs Merab Dvalishvili</p>
                 </button>
             </a>
         </div>
@@ -68,8 +64,8 @@
         <div class="fight-card">
             <a href="">
                 <button>
-                    <img src="../Imagenes pagina ufc\Allen vs Evloev.jpg" alt="Allen vs Evloev">
-                    <p>Arnold Allen vs Movsar Evloev</p>
+                    <img src="../Imagenes pagina ufc\Hernandez vs Aliskerov.jpg" alt="Hernandez vs Aliskerov">
+                    <p>anthony Hernandez vs Ikram Aliskerov</p>
                 </button>
             </a>
         </div>
