--- a/Carteleras/UFC298.html
+++ b/Carteleras/UFC298.html
@@ -46,7 +46,7 @@
         <div class="fight-card">
             <a href="">
                 <button>
-                    <img src="../Imagenes pagina ufc\Garry vs Neal.jpg" alt="Garry vs Neal">
+                    <img src="../Imagenes pagina ufc/Garry Vs Neal.jpg" alt="Garry vs Neal">
                     <p>Ian Machado Garry vs Geoff Neal</p>
                 </button>
             </a>
