--- a/Carteleras/UFC280.html
+++ b/Carteleras/UFC280.html
@@ -56,7 +56,7 @@
             </div>
 
             <div class="fight-card">
-                <a href="https://www.youtube.com/watch?v=7nVi0-OMJEM&pp=ygUPeWFuIHZzIG8nbWFsbGV5" target="_BLANK">
+                <a href="https://www.youtube.com/watch?v=BVztNzi5zNw&pp=ygUZcGV0ciB5YW4gdnMgc2VhbiBvJ21hbGxleQ%3D%3D" target="_BLANK">
                     <button>
                         <img src="../Imagenes pagina ufc\Yan vs O'Malley.jpg" alt="Yan vs O'Malley">
                         <p>Petr Yan vs Sean O´Malley</p>
@@ -65,7 +65,7 @@
             </div>
 
             <div class="fight-card">
-                <a href="https://www.youtube.com/watch?v=tKCq_IS9ons&pp=ygURZGFyaXVzaCB2cyBnYW1yb3Q%3D" target="_BLANK">
+                <a href="https://www.youtube.com/watch?v=BOAIEqdFOf0&pp=ygURZGFyaXVzaCB2cyBnYW1yb3Q%3D" target="_BLANK">
                     <button>
                         <img src="../Imagenes pagina ufc\Dariush vs Gamrot.jpg" alt="Dariush vs Gamrot">
                         <p>Beneil Dariush vs Mateusz Gamrot</p>
