--- a/Carteleras/UFC288.html
+++ b/Carteleras/UFC288.html
@@ -48,7 +48,7 @@
         </div>
 
         <div class="fight-card">
-            <a href="https://www.youtube.com/watch?v=Yv8AEJSTLEE&pp=ygURbXVoYW1tYWQgdnMgYnVybnM%3D" target="_BLANK">
+            <a href="https://www.youtube.com/shorts/MybY3qzPbx8" target="_BLANK">
                 <button>
                     <img src="../Imagenes pagina ufc\Muhammad vs Burns.jpg" alt="Muhammad vs Burns">
                     <p>Belal Muhammad vs Gilbert Burns</p>
