--- a/Carteleras/UFC290.html
+++ b/Carteleras/UFC290.html
@@ -57,7 +57,7 @@
         </div>
 
         <div class="fight-card">
-            <a href="https://www.youtube.com/watch?v=cwYlb8GMh7M&pp=ygUXd2hpdHRha2VyIHZzIGR1IHBsZXNzaXM%3D" target="_BLANK">
+            <a href="https://www.youtube.com/watch?v=Ns8My2V_aiY&pp=ygUXd2hpdHRha2VyIHZzIGR1IHBsZXNzaXM%3D" target="_BLANK">
                 <button>
                     <img src="../Imagenes pagina ufc\Whittaker vs Du Plessis.jpg" alt="Whittaker vs Du Plessis">
                     <p>Robert Whitaker vs Dricus Du Plessis</p>
