--- a/Carteleras/UFC293.html
+++ b/Carteleras/UFC293.html
@@ -39,7 +39,7 @@
 
     <div class="image-container">
         <div class="fight-card">
-            <a href="https://www.youtube.com/watch?v=tZFFjFtcn40&pp=ygUWYWRlc2FueWEgdnMgc3RyaWNrbGFuZA%3D%3D" target="_BLANK">
+            <a href="https://www.youtube.com/watch?v=m3jNtOxIyDA&t=812s&pp=ygUWYWRlc2FueWEgdnMgc3RyaWNrbGFuZA%3D%3D" target="_BLANK">
                 <button>
                     <img src="../Imagenes pagina ufc\Adesanya vs Strickland.jpg" alt="Adesanya vs Strickland">
                     <p>Israel Adesanya vs Sean Strickland</p>
