--- a/Carteleras/UFC296.html
+++ b/Carteleras/UFC296.html
@@ -39,7 +39,7 @@
 
     <div class="image-container">
         <div class="fight-card">
-            <a href="https://www.youtube.com/watch?v=9rAcTPrIWRE&t=1s&pp=ygUUZWR3YXJkcyB2cyBjb3Zpbmd0b24%3D" target="_BLANK">
+            <a href="https://www.youtube.com/watch?v=rIlgiCISkB4&pp=ygUUZWR3YXJkcyB2cyBjb3Zpbmd0b24%3D" target="_BLANK">
                 <button>
                     <img src="../Imagenes pagina ufc\Edwards vs Covington.jpg" alt="Edwards vs Colvington">
                     <p>Leon Edwards vs Colby Covington</p>
@@ -48,7 +48,7 @@
         </div>
 
         <div class="fight-card">
-            <a href="https://www.youtube.com/watch?v=yIzB05SC4QY&pp=ygUVcGFudG9qYSB2cyByb3l2YWwgMjk2" target="_BLANK">
+            <a href="https://www.youtube.com/watch?v=cSREacQd25Q&pp=ygUVcGFudG9qYSB2cyByb3l2YWwgMjk2" target="_BLANK">
                 <button>
                     <img src="../Imagenes pagina ufc\Pantoja vs Royval.jpg" alt="Pantoja vs Royval">
                     <p>Alexandre Pantoja vs Brandon Royval</p>
@@ -57,7 +57,7 @@
         </div>
 
         <div class="fight-card">
-            <a href="https://www.youtube.com/watch?v=jFVJ3F8v694&pp=ygUVdGhvbXBzb24gdnMgcmFraG1vbm92" target="_BLANK">
+            <a href="https://www.youtube.com/watch?v=6J12FCpFNUY&pp=ygUVcmFraG1vbm92IHZzIHRob21wc29u" target="_BLANK">
                 <button>
                     <img src="../Imagenes pagina ufc\Thompson vs Rakhmonov.jpg" alt="Thompson vs Rakhmonov">
                     <p>Stephen Thompson vs Shavkat Rakhmonov</p>
@@ -66,7 +66,7 @@
         </div>
 
         <div class="fight-card">
-            <a href="https://www.youtube.com/watch?v=o6DhCvCcWTY&pp=ygUUZmVyZ3Vzb24gdnMgcGltYmxldHQ%3D" target="_BLANK">
+            <a href="https://www.youtube.com/watch?v=rlj2HQcMXd8&pp=ygUUZmVyZ3Vzb24gdnMgcGltYmxldHQ%3D" target="_BLANK">
                 <button>
                     <img src="../Imagenes pagina ufc\Ferguson vs Pimblett.jpg" alt="Fergusson vs Pimblett">
                     <p>Tony Ferguson vs Paddy Pimblett</p>
