--- a/Carteleras/UFC295.html
+++ b/Carteleras/UFC295.html
@@ -39,7 +39,7 @@
 
     <div class="image-container">
         <div class="fight-card">
-            <a href="https://www.youtube.com/watch?v=iBTS0k1uRck&pp=ygUUcHJvY2hhemthIHZzIHBlcmVpcmE%3D" target="_BLANK">
+            <a href="https://www.youtube.com/watch?v=egMFwJaKIRw&pp=ygUUcHJvY2hhemthIHZzIHBlcmVpcmE%3D" target="_BLANK">
                 <button>
                     <img src="../Imagenes pagina ufc\Pereira vs Prochazka.jpg" alt="Pereira vs Prochazka">
                     <p>Jiri Prochazka vs Alex Pereira</p>
