--- a/Carteleras/UFC282.html
+++ b/Carteleras/UFC282.html
@@ -68,7 +68,7 @@
         <div class="fight-card">
             <a href="https://www.youtube.com/watch?v=f33qcBlb68M&pp=ygURdGlsbCB2cyBkdXBsZXNzaXM%3D" target="_BLANK">
                 <button>
-                    <img src="../Imagenes pagina ufc\Till vs Duplessis.jpg" alt="Till vs Duplessis">
+                    <img src="../Imagenes pagina ufc\Till vs Du Plessis.jpg" alt="Till vs Du Plessis">
                     <p>Darren Till vs Dricus Du Plessis</p>
                 </button>
             </a>
