--- a/Peleadores.html
+++ b/Peleadores.html
@@ -226,7 +226,7 @@
         <div class="peleadores">
             <div class="front">
                 <h2>Dricus Du Plessis</h2>
-                <img src="Imagenes pagina ufc/Dricus Duplessis.jpg">
+                <img src="Imagenes pagina ufc/Dricus Du Plessis.jpg">
                 <h5>Peso Medio</h5>
             </div>
 
@@ -236,10 +236,10 @@
                 <p class="record">17-2-0 (W-L-D)</p><br>
                 <div class="contentBox">
                     <div class="buttonBox">
-                        <button class="boton"><a href="Peleadores/Dricus Duplessis.html">Perfil de atleta</a></button>
+                        <button class="boton"><a href="Peleadores/Dricus Du Plessis.html">Perfil de atleta</a></button>
                     </div>
                 </div>
-                <img src="Imagenes pagina ufc/Dricus DuPlessis Completo.jpg">
+                <img src="Imagenes pagina ufc/Dricus Du Plessis Completo.jpg">
             </div>
         </div>
 
