--- a/Peleadores/Dricus Duplessis.html
+++ b/Peleadores/Dricus Duplessis.html
@@ -40,7 +40,7 @@
             <p class="numeroko">9</p>
             <p class="ko">Victorias por K.O</p>
         </div>
-        <img src="../Imagenes Pagina Ufc/Dricus Duplessis Completo.jpg">
+        <img src="../Imagenes Pagina Ufc/Dricus Du Plessis Completo.jpg">
 
 
     </div>
