--- a/Carteleras.html
+++ b/Carteleras.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8" />
   <link rel="stylesheet" type="text/css" href="EstiloPaginaCarteleras.css" />
   <link rel="stylesheet" type="text/css" href="EstiloPaginaPrincipal.css" />
+  <link rel="stylesheet" type="text/css" href="normalize.css">
   <link rel="icon" href="Imagenes pagina ufc\LogoUFC.ico" />
   <title>Lista de Eventos UFC</title>
 </head>
@@ -268,4 +269,5 @@
     });
   </script>
 </body>
+
 </html>
