--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="EstiloPaginaPrincipal.css">
+    <link rel="stylesheet" type="text/css" href="normalize.css">
     <link rel="icon" href="Imagenes pagina ufc\LogoUFC.ico">
     <link rel="stylesheet" type="text/css" href="EstiloFooter.css">
     <title>UFC - Sitio Web</title>
@@ -12,25 +13,25 @@
 <body>
     <header>
         <nav>
-            <a href="Carteleras.html" class="menu-item left-menu">
+            <a href="Carteleras.html" class="menu-item">
                 Eventos
             </a>
-            <a href="Rankings.html" class="menu-item left-menu">
+            <a href="Rankings.html" class="menu-item">
                 Rankings
             </a>
-            <a href="index.html" class="menu-item ufc-logo">
+            <a href="index.html" class="menu-item">
                 UFC
             </a>
-            <a href="Peleadores.html" class="menu-item right-menu">
+            <a href="Peleadores.html" class="menu-item">
                 Peleadores
             </a>
-            <a href="Tienda.html" class="menu-item right-menu">
+            <a href="Tienda.html" class="menu-item">
                 Tienda
             </a>
         </nav>
     </header>
 
-    <img src="Imagenes pagina ufc/Strickland vs DuPlessis.jpg" class="contenido">
+    <img src="Imagenes pagina ufc/Strickland vs Du Plessis.jpg" class="contenido">
     <div class="texto">
         <p>Proximamente</p>
         <h2>UFC 297</h2>
