--- a/Tienda.html
+++ b/Tienda.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="EstiloTienda.css">
+    <link rel="stylesheet" type="text/css" href="normalize.css">
     <link rel="stylesheet" type="text/css" href="EstiloPaginaPrincipal.css">
     <title>Tienda UFC</title>
 
