--- a/Carteleras/UFC295.html
+++ b/Carteleras/UFC295.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="../normalize.css">
@@ -8,8 +9,9 @@
     <link rel="icon" href="../Imagenes pagina ufc\LogoUFC.ico">
     <title>Ufc 295</title>
 </head>
+
 <body>
-        <header>
+    <header>
         <nav>
             <a href="../Carteleras.html" class="menu-item left-menu">
                 Eventos
@@ -28,14 +30,16 @@
             </a>
         </nav>
     </header>
-    <h1>Cartelera UFC 295</h1>
-    <a href="UFC296.html">
-    <button id="right-button">UFC 296</button>
-    </a>
-    <a href="UFC294.html">
-    <button id="left-button">UFC 294</button>
-    </a>
-    
+
+    <div class="contenedor-informacion">
+        <a href="UFC294.html">
+            <button id="left-button">UFC 294</button>
+        </a>
+        <h1>Cartelera UFC 295</h1>
+        <a href="UFC296.html">
+            <button id="right-button">UFC 296</button>
+        </a>
+    </div>
 
     <div class="image-container">
         <div class="fight-card">
@@ -48,7 +52,8 @@
         </div>
 
         <div class="fight-card">
-            <a href="https://www.youtube.com/watch?v=pMFpg_nWy34&pp=ygUdcGF2bG92aWNoIHZzIGFzcGluYWxsIHJlc3VtZW4%3D" target="_BLANK">
+            <a href="https://www.youtube.com/watch?v=pMFpg_nWy34&pp=ygUdcGF2bG92aWNoIHZzIGFzcGluYWxsIHJlc3VtZW4%3D"
+                target="_BLANK">
                 <button>
                     <img src="../Imagenes pagina ufc\Pavlovich Vs Aspinall.jpg" alt="Pavlovich Vs Aspinall">
                     <p>Sergei Pavlovich vs Tom Aspinall</p>
@@ -66,7 +71,8 @@
         </div>
 
         <div class="fight-card">
-            <a href="https://www.youtube.com/watch?v=g7j9CyUAhPI&pp=ygUWZnJldm9sYSB2cyBzYWludCBkZW5pcw%3D%3D" target="_BLANK">
+            <a href="https://www.youtube.com/watch?v=g7j9CyUAhPI&pp=ygUWZnJldm9sYSB2cyBzYWludCBkZW5pcw%3D%3D"
+                target="_BLANK">
                 <button>
                     <img src="../Imagenes pagina ufc\Frevola vs Saint-Denis.jpg" alt="Frevola vs Saint-Denis">
                     <p>Matt Frevola vs Benoit Saint-Denis</p>
@@ -75,6 +81,7 @@
         </div>
     </div>
 
-   
+
 </body>
+
 </html>
