--- a/Carteleras/UFC297.html
+++ b/Carteleras/UFC297.html
@@ -28,14 +28,15 @@
         </nav>
     </header>
 
-    <h1>Cartelera UFC 297</h1>
-    <a href="UFC296.html">
-    <button id="left-button">UFC 296</button>
-    </a>
-    <a href="UFC298.html">
-        <button id="right-button">UFC 298</button>
+    <div class="contenedor-informacion">
+        <a href="UFC296.html">
+            <button id="left-button">UFC 296</button>
         </a>
-    
+        <h1>Cartelera UFC 297</h1>
+        <a href="UFC298.html">
+            <button id="right-button">UFC 298</button>
+        </a>
+    </div>    
 
     <div class="image-container">
         <div class="fight-card">
