--- a/Carteleras/UFC298.html
+++ b/Carteleras/UFC298.html
@@ -28,10 +28,15 @@
         </nav>
     </header>
 
-    <h1>Cartelera UFC 298</h1>
-    <a href="UFC297.html">
-    <button id="left-button">UFC 297</button>
-    </a>    
+    <div class="contenedor-informacion">
+        <a href="UFC297.html">
+            <button id="left-button">UFC 297</button>
+        </a>
+        <h1>Cartelera UFC 298</h1>
+        <a href="">
+            <button id="right-button">UFC 299</button>
+        </a>
+    </div>    
 
     <div class="image-container">
         <div class="fight-card">
