--- a/Carteleras/UFC290.html
+++ b/Carteleras/UFC290.html
@@ -28,13 +28,15 @@
             </a>
         </nav>
     </header>
-    <h1>Cartelera UFC 290</h1>
-    <a href="UFC291.html">
-    <button id="right-button">UFC 291</button>
-    </a>
-    <a href="UFC289.html">
-    <button id="left-button">UFC 289</button>
-    </a>
+    <div class="contenedor-informacion">
+        <a href="UFC289.html">
+            <button id="left-button">UFC 289</button>
+        </a>
+        <h1>Cartelera UFC 290</h1>
+        <a href="UFC291.html">
+            <button id="right-button">UFC 291</button>
+        </a>
+    </div>   
     
 
     <div class="image-container">
