--- a/Carteleras/UFC280.html
+++ b/Carteleras/UFC280.html
@@ -30,10 +30,15 @@
             </a>
         </nav>
     </header>
-    <h1>Cartelera UFC 280</h1>
-    <a href="UFC281.html">
-        <button id="right-button">UFC 281</button>
-
+    <div class="contenedor-informacion">
+        <a href="">
+            <button id="left-button">UFC 279</button>
+        </a>
+        <h1>Cartelera UFC 280</h1>
+        <a href="UFC281.html">
+            <button id="right-button">UFC 281</button>
+        </a>
+    </div>   
         <div class="image-container">
             <div class="fight-card">
                 <a href="https://www.youtube.com/watch?v=-xAKq2yWM3s&pp=ygUVb2xpdmVpcmEgdnMgbWFraGFjaGV2"
