--- a/Carteleras/UFC281.html
+++ b/Carteleras/UFC281.html
@@ -28,13 +28,15 @@
             </a>
         </nav>
     </header>
-    <h1>Cartelera UFC 281</h1>
-    <a href="UFC282.html">
-    <button id="right-button">UFC 282</button>
-    </a>
-    <a href="UFC280.html">
-    <button id="left-button">UFC 280</button>
-    </a>
+    <div class="contenedor-informacion">
+        <a href="UFC280.html">
+            <button id="left-button">UFC 280</button>
+        </a>
+        <h1>Cartelera UFC 281</h1>
+        <a href="UFC282.html">
+            <button id="right-button">UFC 282</button>
+        </a>
+    </div>   
     
 
     <div class="image-container">
