--- a/Carteleras/UFC282.html
+++ b/Carteleras/UFC282.html
@@ -28,13 +28,15 @@
             </a>
         </nav>
     </header>
-    <h1>Cartelera UFC 282</h1>
-    <a href="UFC283.html">
-    <button id="right-button">UFC 283</button>
-    </a>
-    <a href="UFC281.html">
-    <button id="left-button">UFC 281</button>
-    </a>
+    <div class="contenedor-informacion">
+        <a href="UFC281.html">
+            <button id="left-button">UFC 281</button>
+        </a>
+        <h1>Cartelera UFC 282</h1>
+        <a href="UFC283.html">
+            <button id="right-button">UFC 283</button>
+        </a>
+    </div>   
     
 
     <div class="image-container">
