--- a/Carteleras/UFC285.html
+++ b/Carteleras/UFC285.html
@@ -28,13 +28,15 @@
             </a>
         </nav>
     </header>
-    <h1>Cartelera UFC 285</h1>
-    <a href="UFC286.html">
-    <button id="right-button">UFC 286</button>
-    </a>
-    <a href="UFC284.html">
-    <button id="left-button">UFC 284</button>
-    </a>
+    <div class="contenedor-informacion">
+        <a href="UFC284.html">
+            <button id="left-button">UFC 284</button>
+        </a>
+        <h1>Cartelera UFC 285</h1>
+        <a href="UFC286.html">
+            <button id="right-button">UFC 286</button>
+        </a>
+    </div>   
     
 
     <div class="image-container">
