--- a/Carteleras/UFC286.html
+++ b/Carteleras/UFC286.html
@@ -28,13 +28,15 @@
             </a>
         </nav>
     </header>
-    <h1>Cartelera UFC 286</h1>
-    <a href="UFC287.html">
-    <button id="right-button">UFC 287</button>
-    </a>
-    <a href="UFC285.html">
-    <button id="left-button">UFC 285</button>
-    </a>
+    <div class="contenedor-informacion">
+        <a href="UFC285.html">
+            <button id="left-button">UFC 285</button>
+        </a>
+        <h1>Cartelera UFC 286</h1>
+        <a href="UFC287.html">
+            <button id="right-button">UFC 287</button>
+        </a>
+    </div>   
     
 
     <div class="image-container">
