--- a/Carteleras/UFC289.html
+++ b/Carteleras/UFC289.html
@@ -28,13 +28,15 @@
             </a>
         </nav>
     </header>
-    <h1>Cartelera UFC 289</h1>
-    <a href="UFC290.html">
-    <button id="right-button">UFC 290</button>
-    </a>
-    <a href="UFC288.html">
-    <button id="left-button">UFC 288</button>
-    </a>
+    <div class="contenedor-informacion">
+        <a href="UFC288.html">
+            <button id="left-button">UFC 288</button>
+        </a>
+        <h1>Cartelera UFC 289</h1>
+        <a href="UFC290.html">
+            <button id="right-button">UFC 290</button>
+        </a>
+    </div>   
 
     <div class="image-container">
         <div class="fight-card">
