--- a/Carteleras/UFC293.html
+++ b/Carteleras/UFC293.html
@@ -28,13 +28,16 @@
             </a>
         </nav>
     </header>
-    <h1>Cartelera UFC 293</h1>
-    <a href="UFC294.html">
-    <button id="right-button">UFC 294</button>
-    </a>
-    <a href="UFC292.html">
-    <button id="left-button">UFC 292</button>
-    </a>
+
+    <div class="contenedor-informacion">
+        <a href="UFC292.html">
+            <button id="left-button">UFC 292</button>
+        </a>
+        <h1>Cartelera UFC 293</h1>
+        <a href="UFC294.html">
+            <button id="right-button">UFC 294</button>
+        </a>
+    </div>   
     
 
     <div class="image-container">
