--- a/Carteleras/UFC294.html
+++ b/Carteleras/UFC294.html
@@ -28,13 +28,15 @@
             </a>
         </nav>
     </header>
-    <h1>Cartelera UFC 294</h1>
-    <a href="UFC295.html">
-    <button id="right-button">UFC 295</button>
-    </a>
-    <a href="UFC293.html">
-    <button id="left-button">UFC 293</button>
-    </a>
+    <div class="contenedor-informacion">
+        <a href="UFC293.html">
+            <button id="left-button">UFC 293</button>
+        </a>
+        <h1>Cartelera UFC 294</h1>
+        <a href="UFC295.html">
+            <button id="right-button">UFC 295</button>
+        </a>
+    </div>   
     
 
     <div class="image-container">
