--- a/Carteleras/UFC296.html
+++ b/Carteleras/UFC296.html
@@ -28,13 +28,15 @@
         </nav>
     </header>
 
-    <h1>Cartelera UFC 296</h1>
-    <a href="UFC297.html">
-    <button id="right-button">UFC 297</button>
-    </a>
-    <a href="UFC295.html">
-    <button id="left-button">UFC 295</button>
-    </a>
+    <div class="contenedor-informacion">
+        <a href="UFC295.html">
+            <button id="left-button">UFC 295</button>
+        </a>
+        <h1>Cartelera UFC 296</h1>
+        <a href="UFC297.html">
+            <button id="right-button">UFC 297</button>
+        </a>
+    </div>   
     
 
     <div class="image-container">
