--- a/Carteleras/UFC291.html
+++ b/Carteleras/UFC291.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="../normalize.css">
     <link rel="stylesheet" type="text/css" href="EstiloCarteleras.css">
-    <link rel="stylesheet" type="text/css" href="../EstiloPaginaPrincipal.css">
+    <link rel="stylesheet" type="text/css" href="../EstiloShared.css">
     <link rel="icon" href="../Imagenes pagina ufc\LogoUFC.ico">
     <title>Ufc 291</title>
 </head>
