--- a/Carteleras.html
+++ b/Carteleras.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <link rel="stylesheet" type="text/css" href="EstiloPaginaCarteleras.css" />
-  <link rel="stylesheet" type="text/css" href="EstiloPaginaPrincipal.css" />
+  <link rel="stylesheet" type="text/css" href="EstiloShared.css" />
   <link rel="stylesheet" type="text/css" href="normalize.css">
   <link rel="icon" href="Imagenes pagina ufc\LogoUFC.ico" />
   <title>Lista de Eventos UFC</title>
