--- a/Carteleras/UFC295.html
+++ b/Carteleras/UFC295.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="../normalize.css">
     <link rel="stylesheet" type="text/css" href="EstiloCarteleras.css">
-    <link rel="stylesheet" type="text/css" href="../EstiloPaginaPrincipal.css">
+    <link rel="stylesheet" type="text/css" href="../EstiloShared.css">
     <link rel="icon" href="../Imagenes pagina ufc\LogoUFC.ico">
     <title>Ufc 295</title>
 </head>
