--- a/Peleadores.html
+++ b/Peleadores.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="normalize.css">
     <link rel="stylesheet" type="text/css" href="EstiloPeleadores.css">
-    <link rel="stylesheet" type="text/css" href="EstiloPaginaPrincipal.css">
+    <link rel="stylesheet" type="text/css" href="EstiloShared.css">
     <link rel="icon" href="Imagenes pagina ufc\LogoUFC.ico">
     <title>Peleadores de la UFC</title>
 </head>
