--- a/Rankings.html
+++ b/Rankings.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="EstiloRankings.css">
     <link rel="stylesheet" type="text/css" href="normalize.css">
-    <link rel="stylesheet" type="text/css" href="EstiloPaginaPrincipal.css">
+    <link rel="stylesheet" type="text/css" href="EstiloShared.css">
     <link rel="icon" href="Imagenes pagina ufc\LogoUFC.ico">
     <title>Rankings de Pesos</title>
 </head>
