--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="EstiloPaginaPrincipal.css">
     <link rel="stylesheet" type="text/css" href="normalize.css">
     <link rel="icon" href="Imagenes pagina ufc\LogoUFC.ico">
-    <link rel="stylesheet" type="text/css" href="EstiloFooter.css">
+    <link rel="stylesheet" type="text/css" href="EstiloShared.css">
     <title>UFC - Sitio Web</title>
 </head>
 
