arreglo carpeta css

--- a/Peleadores/Henry Cejudo.html
+++ b/Peleadores/Henry Cejudo.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="EstiloIndividuales.css">
-    <link rel="stylesheet" type="text/css" href="../normalize.css">
-    <link rel="stylesheet" type="text/css" href="../EstiloPaginaPrincipal.css">
+    <link rel="stylesheet" type="text/css" href="../css/EstiloIndividuales.css">
+    <link rel="stylesheet" type="text/css" href="../css/normalize.css">
+    <link rel="stylesheet" type="text/css" href="../css/EstiloShared.css">
     <link rel="icon" href="../Imagenes pagina ufc\LogoUFC.ico">
     <title>Henry Cejudo</title>
 </head>
