--- a/Rankings.html
+++ b/Rankings.html
@@ -3,9 +3,9 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="EstiloRankings.css">
-    <link rel="stylesheet" type="text/css" href="normalize.css">
-    <link rel="stylesheet" type="text/css" href="EstiloShared.css">
+    <link rel="stylesheet" type="text/css" href="css/EstiloRankings.css">
+    <link rel="stylesheet" type="text/css" href="css/normalize.css">
+    <link rel="stylesheet" type="text/css" href="css/EstiloShared.css">
     <link rel="icon" href="Imagenes pagina ufc\LogoUFC.ico">
     <title>Rankings de Pesos</title>
 </head>
