--- a/Carteleras.html
+++ b/Carteleras.html
@@ -3,9 +3,9 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="stylesheet" type="text/css" href="EstiloPaginaCarteleras.css" />
-  <link rel="stylesheet" type="text/css" href="EstiloShared.css" />
-  <link rel="stylesheet" type="text/css" href="normalize.css">
+  <link rel="stylesheet" type="text/css" href="css/EstiloPaginaCarteleras.css" />
+  <link rel="stylesheet" type="text/css" href="css/EstiloShared.css" />
+  <link rel="stylesheet" type="text/css" href="css/normalize.css">
   <link rel="icon" href="Imagenes pagina ufc\LogoUFC.ico" />
   <title>Lista de Eventos UFC</title>
 </head>
