--- a/Carteleras/UFC286.html
+++ b/Carteleras/UFC286.html
@@ -2,9 +2,9 @@
 <html lang="es">
 <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="../normalize.css">
-    <link rel="stylesheet" type="text/css" href="EstiloCarteleras.css">
-    <link rel="stylesheet" type="text/css" href="../EstiloShared.css">
+    <link rel="stylesheet" type="text/css" href="../css/normalize.css">
+    <link rel="stylesheet" type="text/css" href="../css/EstiloCarteleras.css">
+    <link rel="stylesheet" type="text/css" href="../css/EstiloShared.css">
     <link rel="icon" href="../Imagenes pagina ufc\LogoUFC.ico">
     <title>Ufc 286</title>
 </head>
