--- a/Peleadores.html
+++ b/Peleadores.html
@@ -3,9 +3,9 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="normalize.css">
-    <link rel="stylesheet" type="text/css" href="EstiloPeleadores.css">
-    <link rel="stylesheet" type="text/css" href="EstiloShared.css">
+    <link rel="stylesheet" type="text/css" href="css/normalize.css">
+    <link rel="stylesheet" type="text/css" href="css/EstiloPeleadores.css">
+    <link rel="stylesheet" type="text/css" href="css/EstiloShared.css">
     <link rel="icon" href="Imagenes pagina ufc\LogoUFC.ico">
     <title>Peleadores de la UFC</title>
 </head>
