--- a/Tienda.html
+++ b/Tienda.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="EstiloTienda.css">
-    <link rel="stylesheet" type="text/css" href="normalize.css">
-    <link rel="stylesheet" type="text/css" href="EstiloShared.css">
+    <link rel="stylesheet" type="text/css" href="css/normalize.css">
+    <link rel="stylesheet" type="text/css" href="css/EstiloShared.css">
     <link rel="icon" href="Imagenes pagina ufc\LogoUFC.ico" />
     <title>Tienda UFC</title>
 
