--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="EstiloPaginaPrincipal.css">
-    <link rel="stylesheet" type="text/css" href="normalize.css">
+    <link rel="stylesheet" type="text/css" href="css/EstiloPaginaPrincipal.css">
+    <link rel="stylesheet" type="text/css" href="css/normalize.css">
     <link rel="icon" href="Imagenes pagina ufc\LogoUFC.ico">
-    <link rel="stylesheet" type="text/css" href="EstiloShared.css">
+    <link rel="stylesheet" type="text/css" href="css/EstiloShared.css">
     <title>UFC - Sitio Web</title>
 </head>
 
