--- a/Carteleras.html
+++ b/Carteleras.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" type="text/css" href="css/EstiloPaginaCarteleras.css" />
   <link rel="stylesheet" type="text/css" href="css/EstiloShared.css" />
   <link rel="stylesheet" type="text/css" href="css/normalize.css">
+  <link rel="stylesheet" href="Link: https://fontlot.com/165542/sternbach-display-font/">
   <link rel="icon" href="Imagenes pagina ufc\LogoUFC.ico" />
   <title>Lista de Eventos UFC</title>
 </head>
@@ -15,7 +16,7 @@
     <nav>
       <a href="Carteleras.html" class="menu-item left-menu"> Eventos </a>
       <a href="Rankings.html" class="menu-item left-menu"> Rankings </a>
-      <a href="index.html" class="menu-item ufc-logo"> UFC </a>
+      <a href="index.html" class="menu-item ufc-logo" id="logo-ufc"><img  src="Imagenes pagina ufc/Letras-ufc-rojas.jpg"></a>
       <a href="Peleadores.html" class="menu-item right-menu"> Peleadores </a>
       <a href="Tienda.html" class="menu-item right-menu"> Tienda </a>
     </nav>
