--- a/Carteleras/UFC280.html
+++ b/Carteleras/UFC280.html
@@ -3,9 +3,9 @@
 
 <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="css/../css/normalize.css">
-    <link rel="stylesheet" type="text/css" href="css/../css/EstiloCarteleras.css">
-    <link rel="stylesheet" type="text/css" href="css/../css/EstiloShared.css">
+    <link rel="stylesheet" type="text/css" href="../css/normalize.css">
+    <link rel="stylesheet" type="text/css" href="../css/EstiloCarteleras.css">
+    <link rel="stylesheet" type="text/css" href="../css/EstiloShared.css">
     <link rel="icon" href="../Imagenes pagina ufc\LogoUFC.ico">
     <title>Ufc 280</title>
 </head>
