--- a/Rankings.html
+++ b/Rankings.html
@@ -12,24 +12,14 @@
 
 <body>
     <header>
-        <nav>
-            <a href="Carteleras.html" class="menu-item left-menu">
-                Eventos
-            </a>
-            <a href="Rankings.html" class="menu-item left-menu">
-                Rankings
-            </a>
-            <a href="index.html" class="menu-item ufc-logo">
-                UFC
-            </a>
-            <a href="Peleadores.html" class="menu-item right-menu">
-                Peleadores
-            </a>
-            <a href="Tienda.html" class="menu-item right-menu">
-                Tienda
-            </a>
-        </nav>
-    </header>
+    <nav>
+      <a href="Carteleras.html" class="menu-item left-menu"> Eventos </a>
+      <a href="Rankings.html" class="menu-item left-menu"> Rankings </a>
+      <a href="index.html" class="menu-item ufc-logo" id="logo-ufc"><img  src="Imagenes pagina ufc/Letras-ufc-rojas.jpg"></a>
+      <a href="Peleadores.html" class="menu-item right-menu"> Peleadores </a>
+      <a href="Tienda.html" class="menu-item right-menu"> Tienda </a>
+    </nav>
+  </header>
     <div class="contenedor-rankings" id="contenedor-rankings"></div>
 
     <script>
