--- a/Tienda.html
+++ b/Tienda.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="EstiloTienda.css">
+    <link rel="stylesheet" href="css/EstiloTienda.css">
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
     <link rel="stylesheet" type="text/css" href="css/EstiloShared.css">
     <link rel="icon" href="Imagenes pagina ufc\LogoUFC.ico" />
@@ -15,21 +15,12 @@
 <body>
     <header>
         <nav>
-            <a href="Carteleras.html" class="menu-item left-menu">
-                Eventos
-            </a>
-            <a href="Rankings.html" class="menu-item left-menu">
-                Rankings
-            </a>
-            <a href="index.html" class="menu-item ufc-logo">
-                UFC
-            </a>
-            <a href="Peleadores.html" class="menu-item right-menu">
-                Peleadores
-            </a>
-            <a href="Tienda.html" class="menu-item right-menu">
-                Tienda
-            </a>
+            <a href="Carteleras.html" class="menu-item left-menu"> Eventos </a>
+            <a href="Rankings.html" class="menu-item left-menu"> Rankings </a>
+            <a href="index.html" class="menu-item ufc-logo" id="logo-ufc"><img
+                    src="Imagenes pagina ufc/Letras-ufc-rojas.jpg"></a>
+            <a href="Peleadores.html" class="menu-item right-menu"> Peleadores </a>
+            <a href="Tienda.html" class="menu-item right-menu"> Tienda </a>
         </nav>
     </header>
     <div class="contenedor-indumentaria">
