--- a/index.html
+++ b/index.html
@@ -13,21 +13,12 @@
 <body>
     <header>
         <nav>
-            <a href="Carteleras.html" class="menu-item">
-                Eventos
-            </a>
-            <a href="Rankings.html" class="menu-item">
-                Rankings
-            </a>
-            <a href="index.html" class="menu-item">
-                UFC
-            </a>
-            <a href="Peleadores.html" class="menu-item">
-                Peleadores
-            </a>
-            <a href="Tienda.html" class="menu-item">
-                Tienda
-            </a>
+            <a href="Carteleras.html" class="menu-item left-menu"> Eventos </a>
+            <a href="Rankings.html" class="menu-item left-menu"> Rankings </a>
+            <a href="index.html" class="menu-item ufc-logo" id="logo-ufc"><img
+                    src="Imagenes pagina ufc/Letras-ufc-rojas.jpg"></a>
+            <a href="Peleadores.html" class="menu-item right-menu"> Peleadores </a>
+            <a href="Tienda.html" class="menu-item right-menu"> Tienda </a>
         </nav>
     </header>
 
