--- a/Peleadores/Leon Edwards.html
+++ b/Peleadores/Leon Edwards.html
@@ -4,35 +4,19 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="//css/EstiloIndividuales.css">
-    <link rel="stylesheet" type="text/css" href="//css/normalize.css">
-    <link rel="stylesheet" type="text/css" href="//css/layout.css">
-    <link rel="icon" href="//imagenes\LogoUFC.ico">
+    <link rel="stylesheet" type="text/css" href="/css/EstiloIndividuales.css">
+    <link rel="stylesheet" type="text/css" href="/css/normalize.css">
+    <link rel="stylesheet" type="text/css" href="/css/layout.css">
+    <link rel="icon" href="/imagenes\LogoUFC.ico">
     <title>Leon Edwards</title>
 </head>
 
 <body>
     <header>
-        <nav>
-            <a href="//Carteleras.html" class="menu-item left-menu">
-                Eventos
-            </a>
-            <a href="//Rankings.html" class="menu-item left-menu">
-                Rankings
-            </a>
-            <a href="//index.html" class="menu-item ufc-logo">
-                UFC
-            </a>
-            <a href="//Peleadores.html" class="menu-item right-menu">
-                Peleadores
-            </a>
-            <a href="//Tienda.html" class="menu-item right-menu">
-                Tienda
-            </a>
-        </nav>
     </header>
 
-    <div class="contenedor-informacion">
+    <main>
+<div class="contenedor-informacion">
         <div class="informacion">
             <h1>Leon Edwards</h1>
             <p class="division">Peso Welter</p>
@@ -44,6 +28,9 @@
 
 
     </div>
+</main>
+<footer></footer>
+<script src="/js/layout.js"></script>
 </body>
 
 </html>
