--- a/Peleadores/Alexa Grasso.html
+++ b/Peleadores/Alexa Grasso.html
@@ -4,46 +4,33 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="//css/EstiloIndividuales.css">
-    <link rel="stylesheet" type="text/css" href="//css/normalize.css">
-    <link rel="stylesheet" type="text/css" href="//css/layout.css">
-    <link rel="icon" href="//imagenes\LogoUFC.ico">
+    <link rel="stylesheet" type="text/css" href="/css/EstiloIndividuales.css">
+    <link rel="stylesheet" type="text/css" href="/css/normalize.css">
+    <link rel="stylesheet" type="text/css" href="/css/layout.css">
+    <link rel="icon" href="/imagenes\LogoUFC.ico">
     <title>Alexa Grasso</title>
 </head>
 
 <body>
     <header>
-        <nav>
-            <a href="//Carteleras.html" class="menu-item left-menu">
-                Eventos
-            </a>
-            <a href="//Rankings.html" class="menu-item left-menu">
-                Rankings
-            </a>
-            <a href="//index.html" class="menu-item ufc-logo">
-                UFC
-            </a>
-            <a href="//Peleadores.html" class="menu-item right-menu">
-                Peleadores
-            </a>
-            <a href="//Tienda.html" class="menu-item right-menu">
-                Tienda
-            </a>
-        </nav>
     </header>
 
-    <div class="contenedor-informacion">
-        <div class="informacion">
-            <h1>Alexa Grasso</h1>
-            <p class="division">Peso Mosca Femenino</p>
-            <p class="record">16-3-1 (W-L-D)</p>
-            <p class="numeroko">4</p>
-            <p class="ko">Victorias por K.O</p>
+    <main>
+        <div class="contenedor-informacion">
+            <div class="informacion">
+                <h1>Alexa Grasso</h1>
+                <p class="division">Peso Mosca Femenino</p>
+                <p class="record">16-3-1 (W-L-D)</p>
+                <p class="numeroko">4</p>
+                <p class="ko">Victorias por K.O</p>
+            </div>
+            <img src="/imagenes/Alexa Grasso Completo.jpg">
+
+
         </div>
-        <img src="/imagenes/Alexa Grasso Completo.jpg">
-
-
-    </div>
+    </main>
+    <footer></footer>
+    <script src="/js/layout.js"></script>
 </body>
 
 </html>
