--- a/Tienda.html
+++ b/Tienda.html
@@ -13,16 +13,8 @@
 </head>
 
 <body>
-    <header>
-        <nav>
-            <a href="/Carteleras.html" class="menu-item left-menu"> Eventos </a>
-            <a href="/Rankings.html" class="menu-item left-menu"> Rankings </a>
-            <a href="/index.html" class="menu-item ufc-logo" id="logo-ufc"><img
-                    src="imagenes/Letras-ufc-rojas.jpg"></a>
-            <a href="/Peleadores.html" class="menu-item right-menu"> Peleadores </a>
-            <a href="/Tienda.html" class="menu-item right-menu"> Tienda </a>
-        </nav>
-    </header>
+    <header></header>
+<main>
     <div class="contenedor-indumentaria">
         <div class="remeras">
             <h2>Remeras</h2>
@@ -82,13 +74,9 @@
             <button id="cerrarCarritoBtn" onclick="cerrarCarritoModal()">Cerrar Carrito</button>
         </div>
     </div>
-    <script src="js/carrito.js"></script>
-
-    <footer id="footer">
-        <div class="content-footer">
-            <label class="lbl-footer">Todos los derechos reservados ©</label>
-        </div>
-    </footer>
+    <script src="js/carrito.js"></script></main>
+<script src="js/layout.js"></script>
+    <footer id="footer"></footer>
 </body>
 
 </html>
