--- a/Carteleras/UFC299.html
+++ b/Carteleras/UFC299.html
@@ -6,17 +6,17 @@
     <link rel="stylesheet" type="text/css" href="/css/EstiloCarteleras.css">
     <link rel="stylesheet" type="text/css" href="/css/layout.css">
     <link rel="icon" href="/imagenes\LogoUFC.ico">
-    <title>Ufc 298</title>
+    <title>Ufc 299</title>
 </head>
         <header></header>
 
     <main><div class="contenedor-informacion">
-        <a href="UFC297.html">
-            <button id="left-button">UFC 297</button>
+        <a href="UFC298.html">
+            <button id="left-button">UFC 298</button>
         </a>
-        <h1>Cartelera UFC 298</h1>
-        <a href="UFC299.html">
-            <button id="right-button">UFC 299</button>
+        <h1>Cartelera UFC 299</h1>
+        <a href="">
+            <button id="right-button">UFC 300</button>
         </a>
     </div>    
 
@@ -24,8 +24,8 @@
         <div class="fight-card">
             <a href="">
                 <button>
-                    <img src="/imagenes\Volkanovski vs Topuria.jpg" alt="Volkanovski vs Topuria">
-                    <p>alexander Volkanovski vs Ilia Topuria</p>
+                    <img src="/imagenes\Omalley vs Vera.jpg" alt="Omalley vs Vera">
+                    <p>Sean O'Malley vs Marlon Vera</p>
                 </button>
             </a>
         </div>
@@ -33,8 +33,8 @@
         <div class="fight-card">
             <a href="">
                 <button>
-                    <img src="/imagenes/Garry Vs Neal.jpg" alt="Garry vs Neal">
-                    <p>Ian Machado Garry vs Geoff Neal</p>
+                    <img src="/imagenes/Poirier vs Saintdenis.jpg" alt="Poirier vs Saintdenis">
+                    <p>Dustin Poirier vs Benoit Saint-Denis</p>
                 </button>
             </a>
         </div>
@@ -42,8 +42,8 @@
         <div class="fight-card">
             <a href="">
                 <button>
-                    <img src="/imagenes\Cejudo vs Dvalishvili.jpg" alt="Cejudo vs Dvalishvili">
-                    <p>Henry Cejudo vs Merab Dvalishvili</p>
+                    <img src="/imagenes/Holland vs Page.jpg" alt="Holland vs Page">
+                    <p>Kevin Holland vs Michael Page</p>
                 </button>
             </a>
         </div>
@@ -51,8 +51,8 @@
         <div class="fight-card">
             <a href="">
                 <button>
-                    <img src="/imagenes\Hernandez vs Aliskerov.jpg" alt="Hernandez vs Aliskerov">
-                    <p>anthony Hernandez vs Ikram Aliskerov</p>
+                    <img src="/imagenes/Burns vs Dellamadalena.jpg" alt="Burns vs Dellamadalena">
+                    <p>Gilbert Burns vs Jack Della Madalena</p>
                 </button>
             </a>
         </div>
