--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 <body>
     <header></header>
     <main>
-        <img src="imagenes/Volkanovski vs Topuria.jpg" class="contenido">
+        <img src="imagenes/Omalley vs Vera.jpg" class="contenido">
         <div class="texto">
             <p>Proximamente</p>
-            <h2>UFC 298</h2>
-            <p class="pelea">Volkanovski vs Topuria</p>
+            <h2>UFC 299</h2>
+            <p class="pelea">O' Malley vs Vera</p>
         </div>
         <!-- Aquí puedes agregar el contenido principal de tu página -->
     </main>
