--- a/Carteleras.html
+++ b/Carteleras.html
@@ -17,6 +17,16 @@
 
       <div class="eventosNumerados">
         <div>
+          <a href="/Carteleras/UFC299.html"><img src="imagenes/Sean O'Malley.jpg" /><img
+              src="imagenes/Marlon Vera.jpg" /><br />
+            <p>Sean O'Malley vs Marlon Vera</p>
+            <br />UFC 299
+          </a>
+        </div>
+      </div>
+
+      <div class="eventosNumerados">
+        <div>
           <a href="/Carteleras/UFC298.html"><img src="imagenes/Alexander Volkanovski.jpg" /><img
               src="imagenes/Ilia Topuria.jpg" /><br />
             <p>Alexander Volkanovski vs Ilia Topuria</p>
