--- a/Carteleras/UFC290.html
+++ b/Carteleras/UFC290.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 
-<head>/
+<head>
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="/css/normalize.css">
     <link rel="stylesheet" type="text/css" href="/css/EstiloCarteleras.css">
