--- a/Carteleras/UFC293.html
+++ b/Carteleras/UFC293.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" type="text/css" href="/css/EstiloCarteleras.css">
     <link rel="stylesheet" type="text/css" href="/css/layout.css">
     <link rel="icon" href="/imagenes\LogoUFC.ico">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
     <title>Ufc 293</title>
 </head>
 
