--- a/Peleadores/Alex Pereira.html
+++ b/Peleadores/Alex Pereira.html
@@ -7,7 +7,10 @@
     <link rel="stylesheet" type="text/css" href="/css/EstiloIndividuales.css">
     <link rel="stylesheet" type="text/css" href="/css/normalize.css">
     <link rel="stylesheet" type="text/css" href="/css/layout.css">
-    <link rel="icon" href="/imagenes/LogoUFC.ico">
+    <link rel="icon" href="/imagenes\LogoUFC.ico">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
     <title>Alex Pereira</title>
 </head>
 
