--- a/Peleadores/Zhang Weili.html
+++ b/Peleadores/Zhang Weili.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" type="text/css" href="/css/normalize.css">
     <link rel="stylesheet" type="text/css" href="/css/layout.css">
     <link rel="icon" href="/imagenes\LogoUFC.ico">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
     <title>Zhang Weili</title>
 </head>
 
