agregado de cartelera ufc300

--- a/Carteleras.html
+++ b/Carteleras.html
@@ -20,6 +20,16 @@
 
       <div class="eventosNumerados">
         <div>
+          <a href="/Carteleras/UFC300.html"><img src="imagenes/Alex Pereira.jpg" /><img
+              src="imagenes/Jamahal Hill.jpg" /><br />
+            <p>Alex Pereira vs Jamahal Hill</p>
+            <br />UFC 300
+          </a>
+        </div>
+      </div>
+
+      <div class="eventosNumerados">
+        <div>
           <a href="/Carteleras/UFC299.html"><img src="imagenes/Sean O'Malley.jpg" /><img
               src="imagenes/Marlon Vera.jpg" /><br />
             <p>Sean O'Malley vs Marlon Vera</p>
