--- a/Carteleras/UFC300.html
+++ b/Carteleras/UFC300.html
@@ -9,17 +9,17 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
-    <title>Ufc 299</title>
+    <title>Ufc 300</title>
 </head>
         <header></header>
 
     <main><div class="contenedor-informacion">
-        <a href="UFC298.html">
-            <button id="left-button">UFC 298</button>
+        <a href="UFC299.html">
+            <button id="left-button">UFC 299</button>
         </a>
-        <h1>Cartelera UFC 299</h1>
-        <a href="UFC300.html">
-            <button id="right-button">UFC 300</button>
+        <h1>Cartelera UFC 300</h1>
+        <a href="">
+            <button id="right-button">UFC 301</button>
         </a>
     </div>    
 
@@ -27,8 +27,8 @@
         <div class="fight-card">
             <a href="">
                 <button>
-                    <img src="/imagenes\Omalley vs Vera.jpg" alt="Omalley vs Vera">
-                    <p>Sean O'Malley vs Marlon Vera</p>
+                    <img src="/imagenes/Pereira vs Hill.jpg" alt="Pereira vs Hill">
+                    <p>Alex Pereira vs Jamahal Hill</p>
                 </button>
             </a>
         </div>
@@ -36,8 +36,8 @@
         <div class="fight-card">
             <a href="">
                 <button>
-                    <img src="/imagenes/Poirier vs Saintdenis.jpg" alt="Poirier vs Saintdenis">
-                    <p>Dustin Poirier vs Benoit Saint-Denis</p>
+                    <img src="/imagenes/Weili vs Xiaonan.jpg" alt="Weili vs Xiaonan">
+                    <p>Zhang Weili vs Yan Xiaonan</p>
                 </button>
             </a>
         </div>
@@ -45,8 +45,8 @@
         <div class="fight-card">
             <a href="">
                 <button>
-                    <img src="/imagenes/Holland vs Page.jpg" alt="Holland vs Page">
-                    <p>Kevin Holland vs Michael Page</p>
+                    <img src="/imagenes/Gaethje vs Holloway.jpg" alt="Gaethje vs Holloway">
+                    <p>Justin Gaethje vs Max Holloway</p>
                 </button>
             </a>
         </div>
@@ -54,8 +54,8 @@
         <div class="fight-card">
             <a href="">
                 <button>
-                    <img src="/imagenes/Burns vs Dellamadalena.jpg" alt="Burns vs Dellamadalena">
-                    <p>Gilbert Burns vs Jack Della Madalena</p>
+                    <img src="/imagenes/Oliveira vs Tsarukyan.jpg" alt="Oliveira vs Tsarukyan">
+                    <p>Charles Oliveira vs Arman Tsarukyan</p>
                 </button>
             </a>
         </div>
